re-parse-proc-macro/tests/compile_fail/parse_errors/postfix.stderr
error: Unexpected postfix token: '?'
 --> tests/compile_fail/parse_errors/postfix.rs:4:15
  |
4 |     re_parse!("?", "111B222");
  |               ^^^
